Desktop has a fixed nav bar. Yay stretch goal!

--- a/css/index.css
+++ b/css/index.css
@@ -164,7 +164,10 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 85%;
+  background: white;
+  position: fixed;
+  top: 0;
 }
 nav h1 {
   font-size: 4rem;
@@ -223,6 +226,7 @@ footer {
   -moz-border-radius: 5px;
   /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 5px;
+  margin-top: 125px;
 }
 .home .space-images {
   display: flex;
