--- a/less/home-page.less
+++ b/less/home-page.less
@@ -21,6 +21,7 @@
   .earth-image {
     width: 100%;
   .border-radius(5px);
+  margin-top: 125px;
   }
   .space-images {
     display: flex;
