--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,13 +5,19 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 85%;
+    background: white;
+    position: fixed;
+    top: 0;
+    
+
    
 
     h1 {
         font-size: 4rem;
         margin: 20px 0;
         color: @ebony-clay;
+        
     }
     
     .nav-links {
